# audiocoqui

./: .env.example  .gitignore  LICENSE.md  README.md  cleanup  pyproject.toml  requirements.txt
src/: main.py
src/lib/: ebook_reader.py  progress_tracker.py  tts.py
